--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bytereact",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://generalui.firebaseapp.com/",
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
